fixed glitch on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -30,28 +30,30 @@
   display: inline-block;
   top: 50%;
   left: 50%;
+  max-width: 60%;
   margin: 0 auto;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   .site-title {
-    font-size: 50px;
+    font-size: 2rem !important;
     display: inline-block;
     line-height: 1;
     color: #FFF;
     @media only screen and (min-width:$cut){
       margin: 0;
-      font-size: 50px;
+      font-size: 1.5rem;
     }
   }
   .site-description {
-    font-size: 50px;
+    font-size: 2rem !important;
     display: block;
     line-height: 1;
     color: #FFF;
     margin-top: 10px;
+    // max-width: 80% !important;
     // font-family: 'Montserrat', monospace;
     @media only screen and (min-width:$cut){
-      font-size: 50px;
+      font-size: 1.5rem;
     }
   }
   .contact{
